# AI-factory

./: .env.example  .gitignore  README.md  VIEW_OUTPUTS.md  app.py  debug_app.py  install_deps.py  package-lock.json  pyproject.toml  start_api.ps1
.orchids/: orchids.json
api/: __init__.py  server.py
config/: cost_config.yaml  models.yaml
frontend/: package-lock.json  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/factory/: error.tsx  page.tsx
frontend/components/: lenis-provider.tsx
frontend/components/factory/: ambient-panel.tsx  input-section.tsx  pipeline-view.tsx  results-section.tsx
frontend/components/ui/: icons.tsx  markdown-renderer.tsx
frontend/lib/: factory-store.tsx  mock-data.ts  types.ts
src/: __init__.py  schemas.py
src/agents/: __init__.py  base.py  coach.py  cost_estimator.py  dev_team.py  moderator.py  pm.py  qa.py  tech_lead.py  vision.py
src/discussion/: __init__.py  memory.py  orchestrator.py  protocol.py  topics.py
src/utils/: __init__.py  checkpoint.py  cycle_logger.py  discussion_renderer.py  files.py  fuzzy.py  intelligent_prompting.py  interactive_refiner.py  llm_cache.py  model_provider.py  parallel.py  state.py  text.py
tests/: __init__.py  test_discussion.py  test_orchestrator.py
